Use GHCR image and add Watchtower with 5-minute interval
Switch the web service to pull the Docker image from GHCR instead of building locally, and add a Watchtower service to automatically redeploy updates. Set the interval to 300 seconds (5 minutes) and monitor only the nikermanas-web container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nikermana-web
+    image: ghcr.io/dzo4e2250/nikermanas-ancient-tome:latest
+    container_name: nikermanas-web
     restart: unless-stopped
     ports:
       - "5678:80"
-    # environment variables can be set if needed
-  # optionally you could use watchtower as described previously if you plan to auto-update
-  # watchtower:
-  #   image: containrrr/watchtower
-  #   container_name: watchtower
-  #   restart: unless-stopped
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #   command: --interval 60 nikermana-web
+
+  watchtower:
+    image: containrrr/watchtower:latest
+    container_name: watchtower
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 300 nikermanas-web
